crates/oxc_react_compiler/tests/snapshots/same-variable-as-dep-and-redeclare.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/same-variable-as-dep-and-redeclare.js
---
import { c as _c } from "react/compiler-runtime";
// note: comments are for the ideal scopes, not what is currently
// emitted
function foo(props) {
	const $ = _c(14);
	let t0;
	let x;
	if ($[0] !== props.a) {
		x = [];
		x.push(props.a);
		t0 = <div>{x}</div>;
		$[0] = props.a;
		$[1] = t0;
		$[2] = x;
	} else {
		t0 = $[1];
		x = $[2];
	}
	const header = t0;
	let y;
	if ($[3] !== props.b || $[4] !== props.c || $[5] !== x) {
		y = [x];
		x = [];
		y.push(props.b);
		x.push(props.c);
		$[3] = props.b;
		$[4] = props.c;
		$[5] = x;
		$[6] = y;
		$[7] = x;
	} else {
		y = $[6];
		x = $[7];
	}
	let t1;
	if ($[8] !== x || $[9] !== y) {
		t1 = <div>{x}{y}</div>;
		$[8] = x;
		$[9] = y;
		$[10] = t1;
	} else {
		t1 = $[10];
	}
	const content = t1;
	let t2;
	if ($[11] !== content || $[12] !== header) {
		t2 = <>{header}{content}</>;
		$[11] = content;
		$[12] = header;
		$[13] = t2;
	} else {
		t2 = $[13];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
