crates/oxc_react_compiler/tests/snapshots/script-source-type.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/script-source-type.js
---
const { c: _c } = require("react/compiler-runtime");
// @script
const React = require("react");
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.name) {
		t0 = <div>{props.name}</div>;
		$[0] = props.name;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
// To work with snap evaluator
exports = { FIXTURE_ENTRYPOINT: {
	fn: Component,
	params: [{ name: "React Compiler" }]
} };
