crates/oxc_react_compiler/tests/snapshots/sequentially-constant-progagatable-if-test-conditions.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/sequentially-constant-progagatable-if-test-conditions.js
---
function Component() {
	return "ok";
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [],
	isComponent: false
};
