crates/oxc_react_compiler/tests/snapshots/should-bailout-without-compilation-annotation-mode.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/should-bailout-without-compilation-annotation-mode.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Globals: Cannot reassign variables declared outside of the component/hook", labels: One([LabeledSpan { label: Some("`someGlobal` cannot be reassigned"), span: SourceSpan { offset: SourceOffset(130), length: 10 }, primary: false }]), help: Some("Variable `someGlobal` is declared outside of the component/hook. Reassigning this value during render is a form of side effect, which can cause unpredictable behavior depending on when the component happens to re-render. If this variable is used in rendering, use useState instead. Otherwise, consider updating it in an effect. (https://react.dev/reference/rules/components-and-hooks-must-be-pure#side-effects-must-run-outside-of-render)"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @gating @panicThreshold:"none" @compilationMode:"annotation"
let someGlobal = "joe";
function Component() {
	"use forget";
	someGlobal = "wat";
	return null;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
