crates/oxc_react_compiler/tests/snapshots/should-bailout-without-compilation-infer-mode.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/should-bailout-without-compilation-infer-mode.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Globals: Cannot reassign variables declared outside of the component/hook", labels: [LabeledSpan { label: Some("`someGlobal` cannot be reassigned"), span: SourceSpan { offset: 109, length: 10 }, primary: false }], help: Some("Variable `someGlobal` is declared outside of the component/hook. Reassigning this value during render is a form of side effect, which can cause unpredictable behavior depending on when the component happens to re-render. If this variable is used in rendering, use useState instead. Otherwise, consider updating it in an effect. (https://react.dev/reference/rules/components-and-hooks-must-be-pure#side-effects-must-run-outside-of-render)"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @gating @panicThreshold:"none" @compilationMode:"infer"
let someGlobal = "joe";
function Component() {
	someGlobal = "wat";
	return <div>{someGlobal}</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
